--- a/.github/workflows/deploycPanel.yml
+++ b/.github/workflows/deploycPanel.yml
@@ -4,9 +4,10 @@ on:
     branches:
       - main
 jobs:
-  name: FTP-Deploy-Action
-  runs-on: ubuntu-latest
-  steps:
+  FTP-Deploy-Action:
+    name: FTP-Deploy-Action
+    runs-on: ubuntu-latest
+    steps:
     - uses: actions/checkout@v2.1.0
       with:
         fetch-depth: 2
