--- a/requirements.txt
+++ b/requirements.txt
@@ -1,2 +1,89 @@
-Django>=3.1.0
-pytz==2020.5
+anyio==3.7.0
+asgiref==3.6.0
+attrs==22.2.0
+axios==0.1.0
+certifi==2022.12.7
+cffi==1.15.1
+charset-normalizer==3.1.0
+click==8.1.3
+click-plugins==1.1.1
+cligj==0.7.2
+colorama==0.4.6
+contourpy==1.0.7
+cryptography==40.0.1
+cycler==0.11.0
+dj-database-url==1.3.0
+Django==4.1.7
+django-cors-headers==3.14.0
+django-filter==23.2
+django-heroku==0.3.1
+django-sslserver==0.22
+djangorestframework==3.14.0
+djangorestframework-jwt==1.11.0
+dnspython==2.3.0
+docker==6.0.1
+ecdsa==0.18.0
+email-validator==2.0.0.post2
+fastapi==0.98.0
+Fiona==1.9.3
+firebase==4.0.1
+fonttools==4.39.3
+geopandas==0.12.2
+h11==0.14.0
+httpcore==0.17.2
+httptools==0.5.0
+httpx==0.24.1
+huey==2.4.5
+idna==3.4
+itsdangerous==2.1.2
+Jinja2==3.1.2
+kiwisolver==1.4.4
+lxml==4.9.2
+Markdown==3.4.3
+markdown-it-py==2.2.0
+MarkupSafe==2.1.3
+matplotlib==3.7.1
+mdurl==0.1.2
+munch==2.5.0
+networkx==3.1
+numpy==1.24.2
+optional-django==0.3.0
+orjson==3.9.1
+osmnx==1.3.0
+packaging==23.0
+pandas==2.0.0
+Pillow==9.5.0
+psycopg2==2.9.6
+pyasn1==0.4.8
+pycparser==2.21
+pydantic==1.10.9
+Pygments==2.14.0
+PyJWT==1.7.1
+pyparsing==3.0.9
+pyproj==3.5.0
+python-dateutil==2.8.2
+python-decouple==3.8
+python-dotenv==1.0.0
+python-jose==3.3.0
+python-multipart==0.0.6
+pytz==2022.7.1
+pywin32==306
+PyYAML==6.0
+requests==2.28.2
+rich==13.3.2
+rsa==4.9
+shapely==2.0.1
+six==1.16.0
+sniffio==1.3.0
+sqlparse==0.4.3
+starlette==0.27.0
+typing_extensions==4.5.0
+tzdata==2022.7
+ujson==5.8.0
+urllib3==1.26.14
+uvicorn==0.22.0
+watchfiles==0.19.0
+webpack==6.0.0
+websocket-client==1.5.1
+websockets==11.0.3
+whitenoise==6.4.0
