removed double app issue

--- a/uwsgi.ini
+++ b/uwsgi.ini
@@ -1,7 +1,7 @@
 [uwsgi]
 chdir = .
-module = web_project.wsgi:application
-env = DJANGO_SETTINGS_MODULE=web_project.production_settings
+module = wsgi:application
+env = DJANGO_SETTINGS_MODULE=production_settings
 uid = 1000
 master = true
 threads = 2
