--- a/.github/workflows/deploycPanel.yml
+++ b/.github/workflows/deploycPanel.yml
@@ -13,7 +13,7 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
-          node-version: "latest"
+          node-version: 'latest'
 
       - name: Checkout repository
         uses: actions/checkout@v2
