--- a/.github/workflows/deploycPanel.yml
+++ b/.github/workflows/deploycPanel.yml
@@ -1,26 +1,26 @@
-#name: Deploy to cPanel
-#on:
-#  push:
-#    branches:
-#      - main
+name: Deploy to cPanel
+on:
+  push:
+    branches:
+      - main
 
-#jobs:
-#  deploy:
-#    name: Deploy
-#    runs-on: ubuntu-latest
+jobs:
+  deploy:
+    name: Deploy
+    runs-on: ubuntu-latest
 
-#    steps:
-#      - name: Set up Node.js
-#        uses: actions/setup-node@v3
-#        with:
-#          node-version: "latest"
+    steps:
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "latest"
 
-#      - name: Checkout repository
-#        uses: actions/checkout@v3
+      - name: Checkout repository
+        uses: actions/checkout@v3
 
-#      - name: Install SSH key
-#        run: echo "${{ secrets.SSH_SECRET_KEY }}" > ~/.ssh/remote_deploy && chmod 600 ~/.ssh/remote_deploy
+      - name: Install SSH key
+        run: echo "${{ secrets.SSH_SECRET_KEY }}" > ~/.ssh/remote_deploy && chmod 600 ~/.ssh/remote_deploy
 
-#      - name: Deploy to cPanel
-#        run: |
-#          ssh guardia2@mocha3039 "cd Web_app && git pull origin main"
+      - name: Deploy to cPanel
+        run: |
+          ssh guardia2@mocha3039 "cd Web_app && git pull origin main"
